// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Photoshop renders correctly 1`] = `
<DocumentFragment>
  <div
    class="rc-photoshop photoshop-picker"
    style="background: rgb(220, 220, 220); -webkit-border-radius: 4px; border-radius: 4px; -webkit-box-shadow: 0 0 0 1px rgba(0,0,0,.25), 0 8px 16px rgba(0,0,0,.15); box-shadow: 0 0 0 1px rgba(0,0,0,.25), 0 8px 16px rgba(0,0,0,.15); box-sizing: initial; width: 513px;"
  >
    <div
      style="background-image: linear-gradient(-180deg, rgb(240, 240, 240) 0%, rgb(212, 212, 212) 100%); border-bottom: 1px solid rgb(177, 177, 177); -webkit-box-shadow: inset 0 1px 0 0 rgba(255,255,255,.2), inset 0 -1px 0 0 rgba(0,0,0,.02); box-shadow: inset 0 1px 0 0 rgba(255,255,255,.2), inset 0 -1px 0 0 rgba(0,0,0,.02); height: 23px; line-height: 24px; -webkit-border-radius: 4px 4px 0 0; border-radius: 4px 4px 0 0; font-size: 13px; color: rgb(77, 77, 77); text-align: center;"
    >
      Color Picker
    </div>
    <div
      class="flexbox-fix"
      style="padding: 15px 15px 0px; display: flex;"
    >
      <div
        style="width: 256px; height: 256px; position: relative; border-width: 2px; border-style: solid; border-color: rgb(179, 179, 179) rgb(179, 179, 179) rgb(240, 240, 240); border-image: none; overflow: hidden;"
      >
        <div
          class="rc-saturation"
          style="background: rgb(43, 0, 255);"
        >
          <div
            class="rc-saturation__white"
            style="background: linear-gradient(to right, rgb(255, 255, 255), rgba(255, 255, 255, 0));"
          >
            <div
              class="rc-saturation__black"
              style="background: linear-gradient(to top, rgb(0, 0, 0), rgba(0, 0, 0, 0));"
            />
            <div
              class="rc-saturation__pointer"
              style="top: 70%; left: 66.66666666666667%;"
            >
              <div
                style="width: 12px; height: 12px; -webkit-border-radius: 6px; border-radius: 6px; -webkit-box-shadow: inset 0 0 0 1px #fff; box-shadow: inset 0 0 0 1px #fff; -webkit-transform: translate(-6px, -6px); transform: translate(-6px, -6px);"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        style="position: relative; height: 256px; width: 19px; margin-left: 10px; border-width: 2px; border-style: solid; border-color: rgb(179, 179, 179) rgb(179, 179, 179) rgb(240, 240, 240); border-image: none;"
      >
        <div
          class="rc-hue-control rc-hue-control--vertical"
        >
          <div
            class="rc-hue-control__container"
            style="background: linear-gradient(to top, rgb(255, 0, 0) 0%, rgb(255, 255, 0) 17%, rgb(0, 255, 0) 33%, rgb(0, 255, 255) 50%, rgb(0, 0, 255) 67%, rgb(255, 0, 255) 83%, rgb(255, 0, 0) 100%);"
          >
            <div
              class="rc-hue-control__pointer"
              style="left: 0px; top: 30.55555555555557%;"
            >
              <div>
                <div
                  style="-webkit-transform: translate(-13px, -4px); transform: translate(-13px, -4px);"
                >
                  <div
                    style="-webkit-transform: translate(-8px, -5px); transform: translate(-8px, -5px);"
                  />
                </div>
                <div
                  style="-webkit-transform: translate(20px, -14px) rotate(180deg); transform: translate(20px, -14px) rotate(180deg);"
                >
                  <div
                    style="-webkit-transform: translate(-8px, -5px); transform: translate(-8px, -5px);"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        style="width: 180px; margin-left: 10px;"
      >
        <div
          class="flexbox-fix"
          style="display: flex;"
        >
          <div
            style="width: 60px;"
          >
            <div>
              <div
                style="font-size: 14px; color: rgb(0, 0, 0); text-align: center;"
              >
                new
              </div>
              <div
                style="border-width: 1px; border-style: solid; border-color: rgb(179, 179, 179) rgb(179, 179, 179) rgb(240, 240, 240); border-image: none; margin-bottom: 2px; margin-top: 1px;"
              >
                <div
                  style="height: 34px; background: rgb(34, 25, 77); -webkit-box-shadow: inset 1px 0 0 #000, inset -1px 0 0 #000, inset 0 1px 0 #000; box-shadow: inset 1px 0 0 #000, inset -1px 0 0 #000, inset 0 1px 0 #000;"
                />
                <div
                  style="height: 34px; background: rgb(34, 25, 77); -webkit-box-shadow: inset 1px 0 0 #000, inset -1px 0 0 #000, inset 0 -1px 0 #000; box-shadow: inset 1px 0 0 #000, inset -1px 0 0 #000, inset 0 -1px 0 #000;"
                />
              </div>
              <div
                style="font-size: 14px; color: rgb(0, 0, 0); text-align: center;"
              >
                current
              </div>
            </div>
          </div>
          <div
            style="flex: 1 1 0%; margin-left: 20px;"
          >
            <div
              style="background-image: linear-gradient(-180deg, rgb(255, 255, 255) 0%, rgb(230, 230, 230) 100%); border: 1px solid rgb(135, 135, 135); -webkit-border-radius: 2px; border-radius: 2px; height: 20px; -webkit-box-shadow: 0 0 0 1px #878787; box-shadow: 0 0 0 1px #878787; font-size: 14px; color: rgb(0, 0, 0); line-height: 20px; text-align: center; margin-bottom: 10px; cursor: pointer;"
            >
              OK
            </div>
            <div
              style="background-image: linear-gradient(-180deg, rgb(255, 255, 255) 0%, rgb(230, 230, 230) 100%); border: 1px solid rgb(135, 135, 135); -webkit-border-radius: 2px; border-radius: 2px; height: 20px; -webkit-box-shadow: 0 1px 0 0 #EAEAEA; box-shadow: 0 1px 0 0 #EAEAEA; font-size: 14px; color: rgb(0, 0, 0); line-height: 20px; text-align: center; margin-bottom: 10px; cursor: pointer;"
            >
              Cancel
            </div>
            <div
              style="padding-top: 5px; padding-bottom: 9px; width: 80px; position: relative;"
            >
              <div
                class="rc-editable-input"
                style="position: relative;"
              >
                <input
                  class="rc-editable-input__input"
                  id="rc-editable-input-1"
                  spellcheck="false"
                  style="margin-left: 40%; width: 40%; height: 18px; border: 1px solid rgb(136, 136, 136); -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.1), 0 1px 0 0 #ECECEC; box-shadow: inset 0 1px 1px rgba(0,0,0,.1), 0 1px 0 0 #ECECEC; margin-bottom: 5px; font-size: 13px; padding-left: 3px; margin-right: 10px;"
                  value="250"
                />
                <label
                  class="rc-editable-input__label"
                  for="rc-editable-input-1"
                  style="left: 0px; top: 0px; width: 34px; text-transform: uppercase; font-size: 13px; height: 18px; line-height: 22px; position: absolute;"
                >
                  h
                </label>
              </div>
              <div
                class="rc-editable-input"
                style="position: relative;"
              >
                <input
                  class="rc-editable-input__input"
                  id="rc-editable-input-2"
                  spellcheck="false"
                  style="margin-left: 40%; width: 40%; height: 18px; border: 1px solid rgb(136, 136, 136); -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.1), 0 1px 0 0 #ECECEC; box-shadow: inset 0 1px 1px rgba(0,0,0,.1), 0 1px 0 0 #ECECEC; margin-bottom: 5px; font-size: 13px; padding-left: 3px; margin-right: 10px;"
                  value="67"
                />
                <label
                  class="rc-editable-input__label"
                  for="rc-editable-input-2"
                  style="left: 0px; top: 0px; width: 34px; text-transform: uppercase; font-size: 13px; height: 18px; line-height: 22px; position: absolute;"
                >
                  s
                </label>
              </div>
              <div
                class="rc-editable-input"
                style="position: relative;"
              >
                <input
                  class="rc-editable-input__input"
                  id="rc-editable-input-3"
                  spellcheck="false"
                  style="margin-left: 40%; width: 40%; height: 18px; border: 1px solid rgb(136, 136, 136); -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.1), 0 1px 0 0 #ECECEC; box-shadow: inset 0 1px 1px rgba(0,0,0,.1), 0 1px 0 0 #ECECEC; margin-bottom: 5px; font-size: 13px; padding-left: 3px; margin-right: 10px;"
                  value="30"
                />
                <label
                  class="rc-editable-input__label"
                  for="rc-editable-input-3"
                  style="left: 0px; top: 0px; width: 34px; text-transform: uppercase; font-size: 13px; height: 18px; line-height: 22px; position: absolute;"
                >
                  v
                </label>
              </div>
              <div
                style="height: 5px;"
              />
              <div
                class="rc-editable-input"
                style="position: relative;"
              >
                <input
                  class="rc-editable-input__input"
                  id="rc-editable-input-4"
                  spellcheck="false"
                  style="margin-left: 40%; width: 40%; height: 18px; border: 1px solid rgb(136, 136, 136); -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.1), 0 1px 0 0 #ECECEC; box-shadow: inset 0 1px 1px rgba(0,0,0,.1), 0 1px 0 0 #ECECEC; margin-bottom: 5px; font-size: 13px; padding-left: 3px; margin-right: 10px;"
                  value="34"
                />
                <label
                  class="rc-editable-input__label"
                  for="rc-editable-input-4"
                  style="left: 0px; top: 0px; width: 34px; text-transform: uppercase; font-size: 13px; height: 18px; line-height: 22px; position: absolute;"
                >
                  r
                </label>
              </div>
              <div
                class="rc-editable-input"
                style="position: relative;"
              >
                <input
                  class="rc-editable-input__input"
                  id="rc-editable-input-5"
                  spellcheck="false"
                  style="margin-left: 40%; width: 40%; height: 18px; border: 1px solid rgb(136, 136, 136); -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.1), 0 1px 0 0 #ECECEC; box-shadow: inset 0 1px 1px rgba(0,0,0,.1), 0 1px 0 0 #ECECEC; margin-bottom: 5px; font-size: 13px; padding-left: 3px; margin-right: 10px;"
                  value="25"
                />
                <label
                  class="rc-editable-input__label"
                  for="rc-editable-input-5"
                  style="left: 0px; top: 0px; width: 34px; text-transform: uppercase; font-size: 13px; height: 18px; line-height: 22px; position: absolute;"
                >
                  g
                </label>
              </div>
              <div
                class="rc-editable-input"
                style="position: relative;"
              >
                <input
                  class="rc-editable-input__input"
                  id="rc-editable-input-6"
                  spellcheck="false"
                  style="margin-left: 40%; width: 40%; height: 18px; border: 1px solid rgb(136, 136, 136); -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.1), 0 1px 0 0 #ECECEC; box-shadow: inset 0 1px 1px rgba(0,0,0,.1), 0 1px 0 0 #ECECEC; margin-bottom: 5px; font-size: 13px; padding-left: 3px; margin-right: 10px;"
                  value="77"
                />
                <label
                  class="rc-editable-input__label"
                  for="rc-editable-input-6"
                  style="left: 0px; top: 0px; width: 34px; text-transform: uppercase; font-size: 13px; height: 18px; line-height: 22px; position: absolute;"
                >
                  b
                </label>
              </div>
              <div
                style="height: 5px;"
              />
              <div
                class="rc-editable-input"
                style="position: relative;"
              >
                <input
                  class="rc-editable-input__input"
                  id="rc-editable-input-7"
                  spellcheck="false"
                  style="margin-left: 20%; width: 80%; height: 18px; border: 1px solid rgb(136, 136, 136); -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.1), 0 1px 0 0 #ECECEC; box-shadow: inset 0 1px 1px rgba(0,0,0,.1), 0 1px 0 0 #ECECEC; margin-bottom: 6px; font-size: 13px; padding-left: 3px;"
                  value="22194D"
                />
                <label
                  class="rc-editable-input__label"
                  for="rc-editable-input-7"
                  style="position: absolute; top: 0px; left: 0px; width: 14px; text-transform: uppercase; font-size: 13px; height: 18px; line-height: 22px;"
                >
                  #
                </label>
              </div>
              <div
                style="position: absolute; top: 5px; right: -7px; font-size: 13px;"
              >
                <div
                  style="height: 20px; line-height: 22px; padding-bottom: 7px;"
                >
                  °
                </div>
                <div
                  style="height: 20px; line-height: 22px; padding-bottom: 7px;"
                >
                  %
                </div>
                <div
                  style="height: 20px; line-height: 22px; padding-bottom: 7px;"
                >
                  %
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PhotoshopButton renders correctly 1`] = `
<DocumentFragment>
  <div
    style="background-image: linear-gradient(-180deg, rgb(255, 255, 255) 0%, rgb(230, 230, 230) 100%); border: 1px solid rgb(135, 135, 135); -webkit-border-radius: 2px; border-radius: 2px; height: 20px; -webkit-box-shadow: 0 1px 0 0 #EAEAEA; box-shadow: 0 1px 0 0 #EAEAEA; font-size: 14px; color: rgb(0, 0, 0); line-height: 20px; text-align: center; margin-bottom: 10px; cursor: pointer;"
  >
    accept
  </div>
</DocumentFragment>
`;

exports[`PhotoshopFields renders correctly 1`] = `
<DocumentFragment>
  <div
    style="padding-top: 5px; padding-bottom: 9px; width: 80px; position: relative;"
  >
    <div
      class="rc-editable-input"
      style="position: relative;"
    >
      <input
        class="rc-editable-input__input"
        id="rc-editable-input-15"
        spellcheck="false"
        style="margin-left: 40%; width: 40%; height: 18px; border: 1px solid rgb(136, 136, 136); -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.1), 0 1px 0 0 #ECECEC; box-shadow: inset 0 1px 1px rgba(0,0,0,.1), 0 1px 0 0 #ECECEC; margin-bottom: 5px; font-size: 13px; padding-left: 3px; margin-right: 10px;"
        value="0"
      />
      <label
        class="rc-editable-input__label"
        for="rc-editable-input-15"
        style="left: 0px; top: 0px; width: 34px; text-transform: uppercase; font-size: 13px; height: 18px; line-height: 22px; position: absolute;"
      >
        h
      </label>
    </div>
    <div
      class="rc-editable-input"
      style="position: relative;"
    >
      <input
        class="rc-editable-input__input"
        id="rc-editable-input-16"
        spellcheck="false"
        style="margin-left: 40%; width: 40%; height: 18px; border: 1px solid rgb(136, 136, 136); -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.1), 0 1px 0 0 #ECECEC; box-shadow: inset 0 1px 1px rgba(0,0,0,.1), 0 1px 0 0 #ECECEC; margin-bottom: 5px; font-size: 13px; padding-left: 3px; margin-right: 10px;"
        value="100"
      />
      <label
        class="rc-editable-input__label"
        for="rc-editable-input-16"
        style="left: 0px; top: 0px; width: 34px; text-transform: uppercase; font-size: 13px; height: 18px; line-height: 22px; position: absolute;"
      >
        s
      </label>
    </div>
    <div
      class="rc-editable-input"
      style="position: relative;"
    >
      <input
        class="rc-editable-input__input"
        id="rc-editable-input-17"
        spellcheck="false"
        style="margin-left: 40%; width: 40%; height: 18px; border: 1px solid rgb(136, 136, 136); -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.1), 0 1px 0 0 #ECECEC; box-shadow: inset 0 1px 1px rgba(0,0,0,.1), 0 1px 0 0 #ECECEC; margin-bottom: 5px; font-size: 13px; padding-left: 3px; margin-right: 10px;"
        value="100"
      />
      <label
        class="rc-editable-input__label"
        for="rc-editable-input-17"
        style="left: 0px; top: 0px; width: 34px; text-transform: uppercase; font-size: 13px; height: 18px; line-height: 22px; position: absolute;"
      >
        v
      </label>
    </div>
    <div
      style="height: 5px;"
    />
    <div
      class="rc-editable-input"
      style="position: relative;"
    >
      <input
        class="rc-editable-input__input"
        id="rc-editable-input-18"
        spellcheck="false"
        style="margin-left: 40%; width: 40%; height: 18px; border: 1px solid rgb(136, 136, 136); -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.1), 0 1px 0 0 #ECECEC; box-shadow: inset 0 1px 1px rgba(0,0,0,.1), 0 1px 0 0 #ECECEC; margin-bottom: 5px; font-size: 13px; padding-left: 3px; margin-right: 10px;"
        value="255"
      />
      <label
        class="rc-editable-input__label"
        for="rc-editable-input-18"
        style="left: 0px; top: 0px; width: 34px; text-transform: uppercase; font-size: 13px; height: 18px; line-height: 22px; position: absolute;"
      >
        r
      </label>
    </div>
    <div
      class="rc-editable-input"
      style="position: relative;"
    >
      <input
        class="rc-editable-input__input"
        id="rc-editable-input-19"
        spellcheck="false"
        style="margin-left: 40%; width: 40%; height: 18px; border: 1px solid rgb(136, 136, 136); -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.1), 0 1px 0 0 #ECECEC; box-shadow: inset 0 1px 1px rgba(0,0,0,.1), 0 1px 0 0 #ECECEC; margin-bottom: 5px; font-size: 13px; padding-left: 3px; margin-right: 10px;"
        value="0"
      />
      <label
        class="rc-editable-input__label"
        for="rc-editable-input-19"
        style="left: 0px; top: 0px; width: 34px; text-transform: uppercase; font-size: 13px; height: 18px; line-height: 22px; position: absolute;"
      >
        g
      </label>
    </div>
    <div
      class="rc-editable-input"
      style="position: relative;"
    >
      <input
        class="rc-editable-input__input"
        id="rc-editable-input-20"
        spellcheck="false"
        style="margin-left: 40%; width: 40%; height: 18px; border: 1px solid rgb(136, 136, 136); -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.1), 0 1px 0 0 #ECECEC; box-shadow: inset 0 1px 1px rgba(0,0,0,.1), 0 1px 0 0 #ECECEC; margin-bottom: 5px; font-size: 13px; padding-left: 3px; margin-right: 10px;"
        value="0"
      />
      <label
        class="rc-editable-input__label"
        for="rc-editable-input-20"
        style="left: 0px; top: 0px; width: 34px; text-transform: uppercase; font-size: 13px; height: 18px; line-height: 22px; position: absolute;"
      >
        b
      </label>
    </div>
    <div
      style="height: 5px;"
    />
    <div
      class="rc-editable-input"
      style="position: relative;"
    >
      <input
        class="rc-editable-input__input"
        id="rc-editable-input-21"
        spellcheck="false"
        style="margin-left: 20%; width: 80%; height: 18px; border: 1px solid rgb(136, 136, 136); -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.1), 0 1px 0 0 #ECECEC; box-shadow: inset 0 1px 1px rgba(0,0,0,.1), 0 1px 0 0 #ECECEC; margin-bottom: 6px; font-size: 13px; padding-left: 3px;"
        value="FF0000"
      />
      <label
        class="rc-editable-input__label"
        for="rc-editable-input-21"
        style="position: absolute; top: 0px; left: 0px; width: 14px; text-transform: uppercase; font-size: 13px; height: 18px; line-height: 22px;"
      >
        #
      </label>
    </div>
    <div
      style="position: absolute; top: 5px; right: -7px; font-size: 13px;"
    >
      <div
        style="height: 20px; line-height: 22px; padding-bottom: 7px;"
      >
        °
      </div>
      <div
        style="height: 20px; line-height: 22px; padding-bottom: 7px;"
      >
        %
      </div>
      <div
        style="height: 20px; line-height: 22px; padding-bottom: 7px;"
      >
        %
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PhotoshopPointer renders correctly 1`] = `
<DocumentFragment>
  <div>
    <div
      style="-webkit-transform: translate(-13px, -4px); transform: translate(-13px, -4px);"
    >
      <div
        style="-webkit-transform: translate(-8px, -5px); transform: translate(-8px, -5px);"
      />
    </div>
    <div
      style="-webkit-transform: translate(20px, -14px) rotate(180deg); transform: translate(20px, -14px) rotate(180deg);"
    >
      <div
        style="-webkit-transform: translate(-8px, -5px); transform: translate(-8px, -5px);"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`PhotoshopPointerCircle renders correctly 1`] = `
<DocumentFragment>
  <div
    style="width: 12px; height: 12px; -webkit-border-radius: 6px; border-radius: 6px; -webkit-box-shadow: inset 0 0 0 1px #fff; box-shadow: inset 0 0 0 1px #fff; -webkit-transform: translate(-6px, -6px); transform: translate(-6px, -6px);"
  />
</DocumentFragment>
`;

exports[`PhotoshopPreviews renders correctly 1`] = `
<DocumentFragment>
  <div>
    <div
      style="font-size: 14px; color: rgb(0, 0, 0); text-align: center;"
    >
      new
    </div>
    <div
      style="border-width: 1px; border-style: solid; border-color: rgb(179, 179, 179) rgb(179, 179, 179) rgb(240, 240, 240); border-image: none; margin-bottom: 2px; margin-top: 1px;"
    >
      <div
        style="height: 34px; background: rgb(255, 0, 0); -webkit-box-shadow: inset 1px 0 0 #000, inset -1px 0 0 #000, inset 0 1px 0 #000; box-shadow: inset 1px 0 0 #000, inset -1px 0 0 #000, inset 0 1px 0 #000;"
      />
      <div
        style="height: 34px; background: rgb(174, 238, 0); -webkit-box-shadow: inset 1px 0 0 #000, inset -1px 0 0 #000, inset 0 -1px 0 #000; box-shadow: inset 1px 0 0 #000, inset -1px 0 0 #000, inset 0 -1px 0 #000;"
      />
    </div>
    <div
      style="font-size: 14px; color: rgb(0, 0, 0); text-align: center;"
    >
      current
    </div>
  </div>
</DocumentFragment>
`;
